--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong><a href="mailto:pandeyrahulraj99@gmail.com"> pandeyrahulraj99@gmail.com</a></li>
-               
+                <li><i class="icofont-rounded-right"></i> <strong>Mobile No:</strong> <i style="font-size: 1rem;">8604613669</i></li>
               </ul>
             </div>
           </div>
@@ -64,71 +64,99 @@
 
     </div>
 
+    <!---------------------------------------------------------------------------------------------------------------------->
     <div class="interests container">
 
       <div class="section-title">
-        <h2>Interests</h2>
+        <h2>My Interests</h2>
+      </div>
+
+    </div>
+
+    <!---------------------------------------------------------------------------------------------------------------------->
+
+    <div class="interests container">
+
+      <div class="section-title">
+        <h2>Skills & Abilities</h2>
       </div>
 
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <h3 style="color: #ffbb2c;">LINUX</h3>
+            <h3 style="color: #33f492;">Python</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <h3 style="color: #5578ff;">Python</h3>
+            <h3 style="color: #5578ff;">Machine Learning</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <h3 style="color: #e80368;">OpenSource</h3>
+            <h3 style="color: #e80368;">Deep Learning/h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <h3 style="color: #e361ff;">Algorithms</h3>
+            <h3 style="color: #e361ff;">Data Science</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #47aeff;">Video Editing</h3>
+            <h3 style="color: #47aeff;">Azure</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #ffa76e;">Chess</h3>
+            <h3 style="color: #6a6cdf;">SQL</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #11dbcf;">C++</h3>
+            <h3 style="color: #ffa76e;">C/C++<h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #b2904f;">YouTube</h3>
+            <h3 style="color: #11dbcf;">Git/Github</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #b20969;">Competitive Programming</h3>
+            <h3 style="color: #b2904f;">Bootstrap</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #4da069;">Web development</h3>
+            <h3 style="color: #b20969;">HTML</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #6a6cdf;">Android development</h3>
+            <h3 style="color: #4da069;">Django</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <h3 style="color: #6a6cdf;">DSA</h3>
           </div>
         </div>
       </div>
 
     </div>
+
+
+    <div class="interests container">
+
+      <div class="section-title">
+        <h2>Connect Me</h2>
+      </div>
+
+     
+
+    </div>
+
 </section>
 </body>
 </html>
