--- a/index.html
+++ b/index.html
@@ -54,9 +54,14 @@
               </ul>
             </div>
           </div>
-            <p> I'm a student at VIT, Bhopal. I love computers and programming. I have intermediate level proficiency in Python and C++.
-              I'm currently learning web and android development. I have knowledge of HTML, CSS and basics of JavaScript. I actively take part in various competitive programming contests (C++/Python).
-              My hobbies are playing chess, video editing and coding. I'm also interested in contributing to open-source but am just a beginner.
+            <p> I am an undergraduate student pursuing
+              B.tech in Computer Science with
+              specialization in AI and ML, from VIT Bhopal
+              University (2019-23). I have innate problem solving
+              skills and am intrigued by those which I
+              cannot and a great interest in seeking out
+              experiences that will allow me to learn from
+              others.
 
             </p>
         </div>
