--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 31 October 2001</li>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Kanpur, India</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 19</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.Tech CSE (spec. in AI & ML)</li>
               </ul>
             </div>
@@ -99,7 +98,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <h3 style="color: #e80368;">Deep Learning/h3>
+            <h3 style="color: #e80368;">Deep Learning</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
@@ -129,17 +128,17 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #b2904f;">Bootstrap</h3>
+            <h3 style="color: #41ff1b;">Bootstrap</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #b20969;">HTML</h3>
+            <h3 style="color: #f0098c;">HTML</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #4da069;">Django</h3>
+            <h3 style="color: #85ffae;">Django</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
