--- a/index.html
+++ b/index.html
@@ -68,16 +68,41 @@
 
     </div>
 
-    <!---------------------------------------------------------------------------------------------------------------------->
+    <!---------------------------------------------------  Interest  ----------------------------------------------------------------->
     <div class="interests container">
 
       <div class="section-title">
         <h2>My Interests</h2>
       </div>
 
+      <div class="row">
+  
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <h3 style="color: #bc82ff;">Machine Learning</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+          <div class="icon-box">
+            <h3 style="color: #ff0095;">Open Source</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+          <div class="icon-box">
+            <h3 style="color: #e361ff;">Artificial Intelligence</h3>
+          </div>
+        </div>
+    
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+          <div class="icon-box">
+            <h3 style="color: #fc4646;">Teaching</h3>
+          </div>
+        </div>
+      </div>
+
     </div>
 
-    <!---------------------------------------------------------------------------------------------------------------------->
+    <!-----------------------------------------------  Skills and Ability  -------------------------------------------------------------------->
 
     <div class="interests container">
 
@@ -113,7 +138,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #6a6cdf;">SQL</h3>
+            <h3 style="color: #5d5ff0;">SQL</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -133,7 +158,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #f0098c;">HTML</h3>
+            <h3 style="color: #ff56b6;">HTML</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -143,7 +168,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #6a6cdf;">DSA</h3>
+            <h3 style="color: #999bff;">DSA</h3>
           </div>
         </div>
       </div>
