--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>Rahul</p>
+        <p>Rahul Raj</p>
       </div>
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img alt="Rahul" src="./assets/rrp.jpeg" class="img-fluid" height="310" width="310">
+          <img alt="Rahul" src="./assets/rrp.jpeg" class="img-fluid" height="270" width="270">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>ML Enthusiast</h3>
@@ -181,8 +181,33 @@
       <div class="section-title">
         <h2>Connect Me</h2>
       </div>
+      <br>
+      <p align="center">
+        <a href="mailto:pandeyrahulraj99@gmail.com">
+          <img align="center" src="https://img.icons8.com/fluent/48/000000/gmail.png"  height="60" width="50" />
+        </a> &nbsp;&nbsp;
 
+       <a href="https://www.linkedin.com/in/rahul-raj-pandey-60b5861b1">
+        <img align="center" src="https://img.icons8.com/color/48/000000/linkedin.png"  height="60" width="60" />
+      </a> &nbsp;&nbsp;
+
+     <a href="https://www.kaggle.com/rahulrajpandey31">
+      <img align="center" src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/189_Kaggle-512.png"  height="50" width="50" />
+    </a> &nbsp;&nbsp;
+
+       <a href="https://www.instagram.com/they.call.me.lunatic/">
+        <img align="center" src="https://img.icons8.com/fluent/48/000000/instagram-new.png"  height="60" width="60" />
+      </a> &nbsp;&nbsp;
+
+         <a href="https://www.snapchat.com/add/lunatic.rahul">
+          <img align="center" src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Snapchat_colored_svg-512.png"  height="50" width="50" />
+        </a> &nbsp;&nbsp;
+
+        <a href="https://twitter.com/itsRahul_raj">
+          <img align="center" src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Twitter3_colored_svg-512.png"  height="50" width="50" />
+        </a> &nbsp;&nbsp;
      
+     </p>
 
     </div>
 
