--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="./assets/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/icofont.min.css" rel="stylesheet">
   <link href="./assets/style.css" rel="stylesheet">
+  
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.1000.0" data-gr-ext-installed="" data-new-gr-c-s-loaded="14.1000.0">
@@ -50,6 +51,11 @@
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong><a href="mailto:pandeyrahulraj99@gmail.com"> pandeyrahulraj99@gmail.com</a></li>
                 <li><i class="icofont-rounded-right"></i> <strong>Mobile No:</strong> <i style="font-size: 1rem;">8604613669</i></li>
+                <li>
+                  <a href="https://drive.google.com/file/d/1ojDZ_sk7K8e6VWhvgWXzlSUqEVTvPfrr/view?usp=sharing"
+                   <button type="button" class="btn btn mx-3" 
+                  style="background-color:#14b05c; height:35px; width:100px;padding: .375rem rem;color:white" >
+                    Resume</button><a></li>
               </ul>
             </div>
           </div>
@@ -179,7 +185,7 @@
     <div class="interests container">
 
       <div class="section-title">
-        <h2>Connect Me</h2>
+        <h2>Connect With Me</h2>
       </div>
       <br>
       <p align="center">
