--- a/index.html
+++ b/index.html
@@ -187,10 +187,16 @@
       <div class="section-title">
         <h2>Connect With Me</h2>
       </div>
+      
       <br>
       <p align="center">
+
+        <a href="https://github.com/Rahulraj31">
+          <img align="center" src="https://img.icons8.com/nolan/2x/github.png"  height="60" width="60" />
+        </a> &nbsp;&nbsp;
+
         <a href="mailto:pandeyrahulraj99@gmail.com">
-          <img align="center" src="https://img.icons8.com/fluent/48/000000/gmail.png"  height="60" width="50" />
+          <img align="center" src="https://img.icons8.com/fluent/48/000000/gmail.png"  height="60" width="60" />
         </a> &nbsp;&nbsp;
 
        <a href="https://www.linkedin.com/in/rahul-raj-pandey-60b5861b1">
