--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li>
                   <a href="https://drive.google.com/file/d/1ojDZ_sk7K8e6VWhvgWXzlSUqEVTvPfrr/view?usp=sharing"
                    <button type="button" class="btn btn mx-3" 
-                  style="background-color:#14b05c; height:35px; width:100px;padding: .375rem rem;color:white" >
+                  style="background-color:#14b05c; height:35px; width:100px;padding: .375rem rem;color:white;font-weight:bold;" >
                     Resume</button><a></li>
               </ul>
             </div>
