--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img alt="Rahul" src="./assets/rrp.jpeg" class="img-fluid" height="270" width="270">
+          <img alt="Rahul" src="./assets/rrp.jpeg" class="img-fluid" height="270" width="250">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>ML Enthusiast</h3>
@@ -50,16 +50,16 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong><a href="mailto:pandeyrahulraj99@gmail.com"> pandeyrahulraj99@gmail.com</a></li>
-                <li><i class="icofont-rounded-right"></i> <strong>Mobile No:</strong> <i style="font-size: 1rem;">8604613669</i></li>
+                <li><i class="icofont-rounded-right"></i> <strong>Mobile No:</strong> <i style="font-size: 1rem;">+91 8604613669</i></li>
                 <li>
-                  <a href="https://drive.google.com/file/d/1ojDZ_sk7K8e6VWhvgWXzlSUqEVTvPfrr/view?usp=sharing"
+                  <a href="https://drive.google.com/file/d/1XtLCMhLhe8AiV7ix4ivmoltXZmVXRwl6/view?usp=sharing"
                    <button type="button" class="btn btn mx-3" 
                   style="background-color:#14b05c; height:35px; width:100px;padding: .375rem rem;color:white;font-weight:bold;" >
                     Resume</button><a></li>
               </ul>
             </div>
           </div>
-            <p> I am an undergraduate student pursuing
+            <p> <br>I am an undergraduate student pursuing
               B.tech in Computer Science with
               specialization in AI and ML, from VIT Bhopal
               University (2019-23). I have innate problem solving
@@ -101,7 +101,7 @@
     
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <h3 style="color: #fc4646;">Teaching</h3>
+            <h3 style="color: #fc4646;">Gaming</h3>
           </div>
         </div>
       </div>
@@ -159,12 +159,12 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #41ff1b;">Bootstrap</h3>
+            <h3 style="color: #41ff1b;">Java</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3 style="color: #ff56b6;">HTML</h3>
+            <h3 style="color: #ff56b6;">HTML & Bootstrap</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -191,23 +191,23 @@
       <br>
       <p align="center">
 
-        <a href="https://github.com/Rahulraj31">
-          <img align="center" src="https://img.icons8.com/nolan/2x/github.png"  height="60" width="60" />
-        </a> &nbsp;&nbsp;
-
         <a href="mailto:pandeyrahulraj99@gmail.com">
           <img align="center" src="https://img.icons8.com/fluent/48/000000/gmail.png"  height="60" width="60" />
         </a> &nbsp;&nbsp;
 
-       <a href="https://www.linkedin.com/in/rahul-raj-pandey-60b5861b1">
+       <a href="https://www.linkedin.com/in/rahulraj31/">
         <img align="center" src="https://img.icons8.com/color/48/000000/linkedin.png"  height="60" width="60" />
-      </a> &nbsp;&nbsp;
+      </a> &nbsp;
 
      <a href="https://www.kaggle.com/rahulrajpandey31">
       <img align="center" src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/189_Kaggle-512.png"  height="50" width="50" />
-    </a> &nbsp;&nbsp;
+    </a> 
 
-       <a href="https://www.instagram.com/they.call.me.lunatic/">
+    <a href="https://github.com/Rahulraj31">
+      <img align="center" src="https://img.icons8.com/nolan/2x/github.png"  height="60" width="60" />
+    </a> &nbsp;
+
+       <a href="https://www.instagram.com/they.call.me.pandey/">
         <img align="center" src="https://img.icons8.com/fluent/48/000000/instagram-new.png"  height="60" width="60" />
       </a> &nbsp;&nbsp;
 
