updated bio links and resume

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>ML Enthusiast</h3>
-          <p>Py Programmer | Data Scientist| AI Enthusiast | Open-Source Enthusiast
+          <p> AI & ML Trailblazer | Open-Source Enthusiast | Gen-AI | Data Scientist 
           <div class="row">
             <div class="col-lg-6">
               <ul>
@@ -51,22 +51,25 @@
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong><a href="mailto:pandeyrahulraj99@gmail.com"> pandeyrahulraj99@gmail.com</a></li>
                 <li><i class="icofont-rounded-right"></i> <strong>Mobile No:</strong> <i style="font-size: 1rem;">+91 8604613669</i></li>
+                <!--<li><i class="icofont-rounded-right"></i> <strong>Girlfriend:</strong> <i style="font-size: 1rem;"> Antra "Chiya" Tripathi</li> JOKE LOL-->
                 <li>
-                  <a href="https://drive.google.com/file/d/1XtLCMhLhe8AiV7ix4ivmoltXZmVXRwl6/view?usp=sharing"
+                  <a href="https://drive.google.com/file/d/1Emut3Bf5n8UgWLvbSL0XGDG9NBH_A9CG/view?usp=sharing"
                    <button type="button" class="btn btn mx-3" 
                   style="background-color:#14b05c; height:35px; width:100px;padding: .375rem rem;color:white;font-weight:bold;" >
                     Resume</button><a></li>
               </ul>
             </div>
           </div>
-            <p> <br>I am an undergraduate student pursuing
-              B.tech in Computer Science with
-              specialization in AI and ML, from VIT Bhopal
-              University (2019-23). I have innate problem solving
-              skills and am intrigued by those which I
-              cannot and a great interest in seeking out
-              experiences that will allow me to learn from
-              others.
+            <p> <br> I am an avid AI-ML learner and I have pursued
+              my B.tech in <i>CSE specialization in AI and ML
+              (2019-2023)</i> from Vellore Institute of Technology.
+              I have innate problem solving skills and am 
+              intrigued by those which I
+              cannot and I have ability to communicate 
+              technical solutions to non-technical stakeholders.
+              <br> 
+              <b>Always seeking out experiences that will allow me to learn from
+              others.</b>
 
             </p>
         </div>
@@ -211,7 +214,7 @@
         <img align="center" src="https://img.icons8.com/fluent/48/000000/instagram-new.png"  height="60" width="60" />
       </a> &nbsp;&nbsp;
 
-         <a href="https://www.snapchat.com/add/lunatic.rahul">
+         <a href="https://www.snapchat.com/add/rahulraj.31">
           <img align="center" src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Snapchat_colored_svg-512.png"  height="50" width="50" />
         </a> &nbsp;&nbsp;
 
